# ndarray-optimize

./: .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.rst  build.rs
src/: direct.rs  lib.rs  linop.rs
src/prox/: fista.rs  mod.rs  pogm.rs
src/smooth/: bfgs.rs  gd.rs  mod.rs  ogm.rs  pcg.rs
