[package]
name = "ndarray-optimize"
version = "0.0.1"
authors = ["Cameron Blocker <cameronjblocker@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Optimization for ndarrays"
repository = "https://github.com/cjblocker/ndarray-optimize"
readme = "README.rst"
keywords = ["optimize", "optimization", "ndarray"]
build = "build.rs"

[dependencies]

ndarray = { version = "0.13", features = ["approx"] }
ndarray-linalg = "0.12"
approx = "0.3"
num-traits = "0.2"

[dev-dependencies]
ndarray-rand="0.11"
blas-src = { version = "0.5", features = ["intel-mkl"] }
intel-mkl-src = "0.5"
# blas-src = { version = "0.5", features = ["openblas"] }
# openblas-src = "*"
# blas-src = { version = "0.5", features = ["accelerate"] }

[build-dependencies]
rustc_version = "0.2"

## Defaults for each profile
[profile.dev]
# opt-level = 0
# debug = true
# debug-assertions = true
# overflow-checks = true
# lto = false
# panic = 'unwind'
# incremental = true
# codegen-units = 16  # Note: ignored because `incremental` is enabled.
# rpath = false

[profile.release]
# opt-level = 3
# debug = false
# debug-assertions = false
# overflow-checks = false
# lto = false
# panic = 'unwind'
# incremental = false
# codegen-units = 16
# rpath = false

[profile.test]
# opt-level = 0
# debug = 2
# debug-assertions = true
# overflow-checks = true
# lto = false
# panic = 'unwind'    # This setting is always ignored.
# incremental = true
# codegen-units = 16  # Note: ignored because `incremental` is enabled.
# rpath = false

[profile.bench]
# opt-level = 3
# debug = false
# debug-assertions = false
# overflow-checks = false
# lto = false
# panic = 'unwind'    # This setting is always ignored.
# incremental = false
# codegen-units = 16
# rpath = false

